--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -32,7 +32,8 @@
 
     </form>
 
-    <div class="button-holder button-delete d-flex text-center"> <form th:method="delete"
+    <div class="button-holder button-delete d-flex text-center">
+        <form th:method="delete"
                 th:action="@{/place/{id}(id=*{id})}">
         <input type="submit" value="Изтрий" class="btn btn-info btn-lg justify-content-center"/>
     </form>
