--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -63,6 +63,10 @@
                     <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                         <a class="nav-link" href="/admin" >Администратор</a></li>
 
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link" href="/change">Смяна на ролята</a>
+                </li>
+
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <div class="nav-link" >Привет, <th:block sec:authentication="name"> </th:block>!</div>
 
