--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
         <h1>Намерете прекрасни места и забавления за деца!</h1>
         <br>
 
-        <a href="/places" class="fun"><h2>Към забавленията</h2></a>
+        <a href="/places/all" class="fun-about"><h2>Към забавленията</h2></a>
         <br>
 
     </div>
