--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -15,8 +15,8 @@
     <div class=" about">
 
 
-        <h3 >Кои сме ние</h3>
-        <div class="about_text">
+        <h3 class="fun-about">Кои сме ние</h3>
+        <div class="fun-about">
         За нас е удоволствие да Ви представим любимите си места за забавление на малки и пораснали деца!
         <br>
         Заповядайте и разгледайте колекцията ни от местенца на открито и закрито.
@@ -29,6 +29,12 @@
         <br>
         Благодарим за вниманието!
         </div>
+        <br>
+<div>
+    <br>
+    <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
+</div>
+
     </div>
 
 </section>
