Some view fixes

--- a/src/main/resources/templates/changed.html
+++ b/src/main/resources/templates/changed.html
@@ -19,7 +19,7 @@
 
             <div>
                 <br>
-                <a class="a-class" th:href="@{/}">Заповядайте в основното меню...</a></div>
+                <a class="fun-about" th:href="@{/}">Заповядайте в основното меню...</a></div>
         <br>
         </div>
     <br>
