upload picture ready

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -96,19 +96,28 @@
                 </p>
             </div>
 
-            <div class="form-group col-md-6 mb-3">
-            <label for="input" class="text-white font-weight-bold">Качете снимка:</label>
-                <input type="file" id="input" name="image" class="form-control"
-                       placeholder="Изберете снимка">
+
+            <div class="form-group col-md-6 mb-3 picture mx-auto">
+                <label for="image" class="text-white font-weight-bold">Снимка</label>
+                <input type="file"
+                       id="image"
+                       name="image"
+                       placeholder="Снимка">
                 <p class="invalid-feedback errors alert alert-danger">
                     Моля, изберете снимка.
                 </p>
+            </div>
+
+                    <input type="submit" class="btn btn-info btn-lg" value="Добави мястото" />
+
+                </form>
 
         </div>
 
-            <div class="form-group col-md-6 mb-3">
-                    <input type="submit" class="btn btn-info btn-lg" value="Добави мястото" />
-            </div>
+
+
+
+
         </div>
 
 
