--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -102,7 +102,7 @@
                 <input type="file"
                        id="image"
                        name="image"
-                       placeholder="Снимка">
+                       placeholder="Снимка" required>
                 <p class="invalid-feedback errors alert alert-danger">
                     Моля, изберете снимка.
                 </p>
