--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,21 +26,21 @@
 
 <!-- Boxes Section -->
 <section class="boxes">
-    <a href="/" class="main-btn" >
+    <a th:href="@{/categories/ВЪТРЕ}" class="main-btn">
         <div class="box">
             <h3>На закрито</h3>
             <img src="/images/ball-start.jpg" height="50px" alt="">
 
         </div>
     </a>
-    <a href="/" class="main-btn" >
+    <a th:href="@{/categories/НАВЪН}" class="main-btn">
         <div class="box">
             <h3>На открито</h3>
             <img src="/images/bear.jpg" height="50px" alt="">
 
         </div>
     </a>
-    <a href="/" class="main-btn" >
+    <a th:href="@{/categories/ЖИВОТНИ}" class="main-btn">
         <div class="box">
             <h3>С животни</h3>
             <img src="/images/zaek.jpg" height="50px" alt="">
