--- a/src/main/resources/templates/places.html
+++ b/src/main/resources/templates/places.html
@@ -26,10 +26,10 @@
         <div class="box">
 
 
-            <div th:text="*{summary()}" style="white-space: pre-line;"> </div>
+            <div th:text="${place.getSummary}" style="white-space: pre-line;"></div>
 
             <div>
-                <a class="a-class" th:href="@{/place/{id}(id=*{id})}">Допълнителна информация...</a>
+                <a class="a-class" th:href="@{/place/{id}(id=${place.id})}">Допълнителна информация...</a>
             </div>
         </div>
 
