--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -109,8 +109,9 @@
             </div>
 
                     <input type="submit" class="btn btn-info btn-lg" value="Добави мястото" />
-
+        </div>
                 </form>
+
 
         </div>
 
