--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -27,7 +27,14 @@
             </div>
         </div>
     </div>
+
+    <div class="text-center">
+        <br>
+        <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
+    </div>
 </section>
+
+
 
 </body>
 
