--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -22,6 +22,8 @@
         <div style="text-align: center">
             <img style="height: 200px; width: 300px" th:src="${imageURL}" alt="test image">
         </div>
+
+        <button id="loadCommentsButton" class="btn btn-info btn-lg justify-content-center" th:data-place-id="${place.id}">Зареди коментари за мястото</button>
     </div>
 
     <span class="nav-item text-center" sec:authorize="hasRole('ADMIN')">
@@ -42,9 +44,9 @@
 
 </div>
 
+<!-- Връзка към JS файла за извличане на коментарите (ако не е включен в details.html) -->
+<script src="js/comments.js"></script>
 
-</div>
-</div>
 </body>
 
 <div class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></div>
