--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,10 +51,10 @@
 
 </div>
 
-<div class="footer">
+<footer class="footer">
     <br>
     <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
-</div>
+</footer>
 
 </body>
 </html>
