--- a/src/main/resources/templates/login-error.html
+++ b/src/main/resources/templates/login-error.html
@@ -13,7 +13,7 @@
 <div class="container">
     <h2 class="text-center text-white">Login-error page</h2>
 
-    <div class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></div>
+    <footer class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></footer>
 </div>
 
 </body>
