--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -17,6 +17,6 @@
 
 </body>
 
-<div class="footer"><h6>&copy;2023 - Ани Петкова - Всички права запазени.</h6></div>
+<footer class="footer"><h6>&copy;2023 - Ани Петкова - Всички права запазени.</h6></footer>
 
 </html>
