--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -127,7 +127,7 @@
 </body>
 
 
-<div class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></div>
+<footer class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></footer>
 
 
 </html>
