--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
     </form>
 </div>
 
-<div class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></div>
+<footer class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></footer>
 
 </body>
 </html>
