--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="http://www.w3.org/1999/html">
 <head th:replace="~{fragments/head}">
-
+    <script src="/js/comments.js" defer="true"></script>
 </head>
 
 <body>
@@ -26,6 +26,27 @@
 
         <button id="loadCommentsButton" class="btn btn-info btn-lg justify-content-center" th:data-place-id="${place.id}">Зареди коментари за мястото</button>
     </div>
+
+    <!-- Контейнер за визуализация на коментарите -->
+    <div id="comments-container">
+        <!-- Тук вече съдържанието на коментарите се визуализира при зареждането на страницата -->
+        <div th:each="comment : ${comments}">
+            <p th:text="${comment.content}"></p>
+        </div>
+    </div>
+
+
+    <!-- Форма за добавяне на коментар -->
+    <form th:method="post" th:action="@{/comments/place/{placeId}(placeId=${place.id})}" th:object="${newCommentBindingModel}"
+          class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
+        <!-- Полета за въвеждане на информация за коментара -->
+        <!-- Пример: -->
+        <label for="comment">Коментар:</label>
+        <textarea id="comment" name="comment" class=" font-weight-bold"></textarea>
+
+        <!-- Бутон за изпращане на формата -->
+        <button type="submit">Добави коментар</button>
+    </form>
 
     <span class="nav-item text-center" sec:authorize="hasRole('ADMIN')">
 
