comments save in DB

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -42,7 +42,7 @@
         <!-- Полета за въвеждане на информация за коментара -->
         <!-- Пример: -->
         <label for="comment">Коментар:</label>
-        <textarea id="comment" name="comment" class=" font-weight-bold"></textarea>
+        <textarea id="comment" name="content" class="font-weight-bold"></textarea>
 
         <!-- Бутон за изпращане на формата -->
         <button type="submit">Добави коментар</button>
