--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
     <a th:href="@{/categories/ВЪТРЕ}" class="main-btn">
         <div class="box">
             <h3>На закрито</h3>
-            <img src="/images/ball-start.jpg" height="50px" alt="">
+            <img src="/images/lulka.jpg" height="50px" alt="">
 
         </div>
     </a>
