--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="http://www.w3.org/1999/html">
+
 <head th:replace="~{fragments/head}">
     <script src="/js/comments.js" defer="true"></script>
 </head>
@@ -11,34 +10,46 @@
     <nav th:replace="~{fragments/navbar}"></nav>
 </div>
 <div class="container">
-    <div th:object="${place}" class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center" data-place-id="${place.id}">
-        <div class="box">
+    <div th:object="${place}" class="main-form mx-auto col-md-8 my-3 d-flex flex-column align-items-center" data-place-id="${place.id}">
+        <div class="box mb-3">
             <div th:text="${place.getSummary()}" style="white-space: pre-line;"> </div>
         </div>
         <div style="text-align: center">
-            <img style="height: 200px; width: 300px" th:src="${imageURL}" alt="Снимка">
+            <img style="height: 100px; width: 100px" th:src="${imageURL}" alt="Снимка">
         </div>
     </div>
 
-    <!-- Бутон за зареждане на коментарите -->
-    <a th:href="@{/comments/place/{placeId}(placeId=${place.id})}" class="btn btn-info btn-lg justify-content-center">Зареди коментарите</a>
+    <div class="text-center mb-3"> <!-- Бутон за зареждане на коментарите -->
+        <a th:href="@{/comments/place/{placeId}(placeId=${place.id})}" class="btn btn-info btn-lg">Зареди коментарите</a>
+    </div>
 
-    <span class="nav-item text-center" sec:authorize="hasRole('ADMIN')">
-        <div class="button-delete ">
+    <!-- Форма за добавяне на коментар -->
+    <form th:method="post" th:action="@{/comments/place/{placeId}(placeId=${place.id})}" th:object="${newCommentBindingModel}"
+          class="main-form mx-auto col-md-8 d-flex flex-column align-items-center mb-3">
+
+        <label for="comment">Коментар:</label>
+        <textarea id="comment" name="content" class="font-weight-bold form-control mb-2"></textarea>
+
+        <button type="submit" class="btn btn-primary">Добави коментар</button>
+    </form>
+
+    <div class="text-center mb-3" sec:authorize="hasRole('ADMIN')">
+        <div class="button-delete">
             <form th:method="delete" th:action="@{/place/{id}(id=*{id})}">
-                <input type="submit" value="Изтрий" class="btn btn-info btn-lg justify-content-center"/>
+                <input type="submit" value="Изтрий" class="btn btn-danger btn-lg"/>
             </form>
         </div>
-    </span>
+    </div>
 
     <div class="text-center">
-        <br>
         <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
     </div>
 </div>
 
 </body>
 
-<footer class="footer"><h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6></footer>
+<footer class="footer text-center mt-5">
+    <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
+</footer>
 
 </html>
