some css changes

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -16,7 +16,7 @@
 
 
         <h3 class="fun-about">Кои сме ние</h3>
-        <div class="fun-about">
+        <p class="fun-about">
         За нас е удоволствие да Ви представим любимите си места за забавление на малки и пораснали деца!
         <br>
         Заповядайте и разгледайте колекцията ни от местенца на открито и закрито.
@@ -28,7 +28,7 @@
         Разходете се сред природата с любимите си същества и се насладете на пътешествието!
         <br>
         Благодарим за вниманието!
-        </div>
+        </p>
         <br>
 <div>
     <br>
