--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -15,25 +15,30 @@
     <div class=" about">
 
 
-        <h3 class="fun-about">Кои сме ние</h3>
+        <h3>Кои сме ние</h3>
+
         <p class="fun-about">
-        За нас е удоволствие да Ви представим любимите си места за забавление на малки и пораснали деца!
-        <br>
-        Заповядайте и разгледайте колекцията ни от местенца на открито и закрито.
-        <br>
-        Тук ще откриете, къде бихте могли да отидете за ден, два или повече.
-        <br>
-        Как да срещнете интересни животни или да поплувате, а защо не и двете?
-        <br>
-        Разходете се сред природата с любимите си същества и се насладете на пътешествието!
-        <br>
-        Благодарим за вниманието!
+            За нас е удоволствие да Ви представим любимите си места за забавление на малки и пораснали деца!
         </p>
-        <br>
-<div>
-    <br>
-    <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
-</div>
+        <p class="fun-about">
+            Заповядайте и разгледайте колекцията ни от местенца на открито и закрито.
+        </p>
+        <p class="fun-about">
+            Тук ще откриете, къде бихте могли да отидете за ден, два или повече.
+        </p>
+        <p class="fun-about">
+            Как да срещнете интересни животни или да поплувате, а защо не и двете?
+        </p>
+        <p class="fun-about">
+            Разходете се сред природата с любимите си същества и се насладете на пътешествието!
+        </p>
+        <p class="thank">
+            Благодарим за вниманието!
+        </p>
+        <div>
+
+            <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
+        </div>
 
     </div>
 
