some html changes

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -35,10 +35,10 @@
         <p class="thank">
             Благодарим за вниманието!
         </p>
-        <div>
+        <details class="fun-about">
 
             <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
-        </div>
+        </details>
 
     </div>
 
