some html changes

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 
 
 <section class="boxes about_container">
-    <div class=" about">
+    <article class=" about">
 
 
         <h3>Кои сме ние</h3>
@@ -40,7 +40,7 @@
             <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
         </details>
 
-    </div>
+    </article>
 
 </section>
 
