--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 
-<div class="container">
+<section class="container">
 
     <h2 class="text-center text-white">Добавете място:</h2>
 
@@ -115,7 +115,7 @@
 
 
 
-        </div>
+        </section>
 
 
 
