some html and css changes

--- a/src/main/resources/templates/change.html
+++ b/src/main/resources/templates/change.html
@@ -6,10 +6,10 @@
 
 </head>
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-    <br>
-</div>
+
+</header>
 <br>
 <!-- Форма за смяна на ролята -->
 <form
@@ -42,3 +42,5 @@
 </form>
 </body>
 </html>
+
+
