--- a/src/main/resources/templates/changed.html
+++ b/src/main/resources/templates/changed.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 
 
 <section class="boxes about_container">
