--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 <div class="container">
     <div th:object="${place}" class="main-form mx-auto col-md-8 my-3 d-flex flex-column align-items-center" data-place-id="${place.id}">
         <div class="box mb-3">
