--- a/src/main/resources/templates/login-error.html
+++ b/src/main/resources/templates/login-error.html
@@ -6,9 +6,9 @@
 <head th:replace="~{fragments/head}">
 </head>
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 
 <div class="container">
     <h2 class="text-center text-white">Login-error page</h2>
