--- a/src/main/resources/templates/places.html
+++ b/src/main/resources/templates/places.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 <!-- Списък с места -->
 <p></p>
 <br>
