--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,9 +4,9 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 
 <div class="container">
     <h2 class="text-center text-white">Вход</h2>
