--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-<div>
+<header>
     <nav th:replace="~{fragments/navbar}"></nav>
-</div>
+</header>
 <div class="container">
     <h2 class="text-center text-white">Регистрация</h2>
     <form th:action="@{/register}"
