add details and summary in places.html

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -14,8 +14,8 @@
 <section class="boxes about_container">
     <article class=" about">
 
+<header> <h3>Кои сме ние</h3></header>
 
-        <h3>Кои сме ние</h3>
 
         <p class="fun-about">
             За нас е удоволствие да Ви представим любимите си места за забавление на малки и пораснали деца!
