--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -7,16 +7,70 @@
 
 <body>
 <header>
-    <nav th:replace="~{fragments/navbar}"></nav>
+    <div>
+        <nav class="navbar navbar-expand-lg rounded nav-details">
+
+            <ul class="navbar-nav mr-auto col-12 justify-content-between">
+
+                <li class="nav-item"><a class="nav-link" href="/">Начало</a></li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">За нас</a></li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/places/all">Виж всички места</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/register">Регистрация</a></li>
+
+
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/login">Вход</a>
+                </li>
+
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/place/add">Добави място</a>
+                </li>
+
+
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link" href="/change">Смяна на ролята</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <div class="nav-link">Привет,
+                        <th:block sec:authentication="name"></th:block>
+                        !
+                    </div>
+
+                </li>
+
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/logout">
+                        <form th:method="post"
+                              th:action="@{/logout}">
+                            <input class="logout" type="submit" value="Изход"/>
+                        </form>
+                    </a>
+
+                </li>
+
+
+            </ul>
+        </nav>
+    </div>
 </header>
 <div class="container">
-    <div th:object="${place}" class="main-form mx-auto col-md-8 my-3 d-flex flex-column align-items-center" data-place-id="${place.id}">
+    <div th:object="${place}" class="main-form mx-auto col-md-8 my-3 d-flex flex-column " data-place-id="${place.id}">
         <div class="box mb-3">
             <div th:text="${place.getSummary()}" style="white-space: pre-line;"> </div>
+
+            <img style="height: 300px; width: 300px" th:src="${imageURL}" alt="Снимка" class="pic-details">
         </div>
-        <div style="text-align: center">
-            <img style="height: 100px; width: 100px" th:src="${imageURL}" alt="Снимка">
-        </div>
+
     </div>
 
     <div class="text-center mb-3"> <!-- Бутон за зареждане на коментарите -->
@@ -48,7 +102,7 @@
 
 </body>
 
-<footer class="footer text-center mt-5">
+<footer class="footer text-center mt-5 position-relative">
     <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
 </footer>
 
