--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,79 +21,70 @@
 </head>
 <body>
 <div>
-    <nav class="navbar navbar-expand-lg fixed-top rounded">
-<!--        <a class="navbar-brand" href="/"><img alt="car picture"-->
-<!--                                              src="@{/images/sun.png}"-->
-<!--                                              class="logo">-->
-<!--        </a>-->
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
-<!--                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
+<nav class="navbar navbar-expand-lg fixed-top rounded">
+
+    <ul class="navbar-nav mr-auto col-12 justify-content-between">
+
+        <li class="nav-item"><a class="nav-link" href="/">Начало</a></li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/about">За нас</a></li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/places/all">Виж всички места</a>
+        </li>
+
+        <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="nav-link" href="/register">Регистрация</a></li>
 
 
-<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-            <ul class="navbar-nav mr-auto col-12 justify-content-between">
-                <!--            https://github.com/luchob/softuni-may2022/blob/main/mobilele/src/main/resources/templates/fragments/navbar.html-->
+        <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="nav-link" href="/login">Вход</a>
+        </li>
 
 
-                    <li class="nav-item"><a class="nav-link" href="/">Начало</a></li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">За нас</a></li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/places/all">Виж всички места</a>
-                    </li>
-
-                    <li class="nav-item" sec:authorize="!isAuthenticated()">
-                        <a class="nav-link" href="/register">Регистрация</a></li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="nav-link" href="/place/add">Добави място</a>
+        </li>
 
 
-                    <li class="nav-item" sec:authorize="!isAuthenticated()">
-                        <a class="nav-link" href="/login">Вход</a>
-                    </li>
+        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+            <a class="nav-link" href="/change">Смяна на ролята</a>
+        </li>
+
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+            <div class="nav-link">Привет,
+                <th:block sec:authentication="name"></th:block>
+                !
+            </div>
+
+        </li>
 
 
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link" href="/place/add">Добави място</a>
-                    </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="nav-link" href="/logout">
+                <form th:method="post"
+                      th:action="@{/logout}">
+                    <input class="logout" type="submit" value="Изход"/>
+                </form>
+            </a>
+
+        </li>
 
 
-                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                    <a class="nav-link" href="/change">Смяна на ролята</a>
-                </li>
-
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <div class="nav-link" >Привет, <th:block sec:authentication="name"> </th:block>!</div>
-
-                </li>
-
-                <!--            да оправя да бъде th:text="#{navbar_all_offers}"-->
-
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/logout">
-                        <form  th:method="post"
-                              th:action="@{/logout}">
-                            <input class="logout" type="submit" value="Изход"/>
-                        </form>
-                    </a>
-
-                </li>
-
-
-            </ul>
-<!--        </div>-->
-    </nav>
+    </ul>
+</nav>
 </div>
-
 
 </body>
 </html>
 
-<!--&lt;!&ndash;&ndash;&gt;<meta name="viewport"> е HTML метатег, който се използва за управление на начина, по който уеб страницата се представя на устройства с различни размери на екрана. Този метатег помага за настройката на размера на изгледа, който браузърът предоставя на уеб страницата.-->
+<!--<meta name="viewport"> е HTML метатаг, който се използва за управление на начина,
+по който уеб страницата се представя на устройства с различни размери на екрана.
+ Този метатаг помага за настройката на размера на изгледа, който браузърът предоставя на уеб страницата.-->
 
-<!--Най-често използваният атрибут в този метатег е content, който съдържа различни настройки за viewport-a. Например:-->
+<!--Най-често използваният атрибут в този метатег е content, който съдържа различни настройки за viewport-a.
+Например:-->
 
 <!--width=device-width: Автоматично приспособява ширината на страницата спрямо устройството.-->
 <!--initial-scale=1.0: Задава началното увеличение на страницата.-->
