--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,61 @@
 
 <body>
 <header>
-    <nav th:replace="~{fragments/navbar}"></nav>
+    <div>
+        <nav class="navbar navbar-expand-lg rounded nav-details">
+
+            <ul class="navbar-nav mr-auto col-12 justify-content-between">
+
+                <li class="nav-item"><a class="nav-link" href="/">Начало</a></li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">За нас</a></li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/places/all">Виж всички места</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/register">Регистрация</a></li>
+
+
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/login">Вход</a>
+                </li>
+
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/place/add">Добави място</a>
+                </li>
+
+
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link" href="/change">Смяна на ролята</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <div class="nav-link">Привет,
+                        <th:block sec:authentication="name"></th:block>
+                        !
+                    </div>
+
+                </li>
+
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/logout">
+                        <form th:method="post"
+                              th:action="@{/logout}">
+                            <input class="logout" type="submit" value="Изход"/>
+                        </form>
+                    </a>
+
+                </li>
+
+
+            </ul>
+        </nav>
+    </div>
 </header>
 
 <!-- Top Container -->
@@ -16,12 +70,8 @@
     <div class="showcase">
         <h1>Намерете прекрасни места и забавления за деца!</h1>
         <br>
-
         <a href="/places/all" class="fun-about"><h2>Към забавленията</h2></a>
-        <br>
-
     </div>
-
 </section>
 
 <!-- Boxes Section -->
@@ -29,21 +79,21 @@
     <a th:href="@{/categories/ВЪТРЕ}" class="main-btn">
         <div class="box">
             <h3>На закрито</h3>
-            <img src="/images/lulka.jpg" height="50px" alt="">
+            <img src="/images/lulka.jpg" height="100px" alt="" class="pic-index">
 
         </div>
     </a>
     <a th:href="@{/categories/НАВЪН}" class="main-btn">
         <div class="box">
             <h3>На открито</h3>
-            <img src="/images/bear.jpg" height="50px" alt="">
+            <img src="/images/bear.jpg" height="100px" alt="" class="pic-index">
 
         </div>
     </a>
     <a th:href="@{/categories/ЖИВОТНИ}" class="main-btn">
         <div class="box">
             <h3>С животни</h3>
-            <img src="/images/zaek.jpg" height="50px" alt="">
+            <img src="/images/zaek.jpg" height="100px" alt="" class="pic-index">
 
         </div>
     </a>
@@ -51,8 +101,7 @@
 
 </div>
 
-<footer class="footer">
-    <br>
+<footer class="footer text-center position-relative">
     <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
 </footer>
 
