--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -86,6 +86,10 @@ body {
     transform: scale(1.3);
     transition: transform 0.3s;
 }
+.more-info:hover {
+    transform: scale(1.3);
+    transition: transform 0.3s;
+}
 
 
 
@@ -161,6 +165,7 @@ body {
     font-size:  1.05rem;
     color:rgb(5, 28, 15);
    font-weight: bolder;
+    padding-top: 10px;
     /*font-weight: bold;*/
 }
 
