--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -17,28 +17,24 @@
 <header> <h3>Кои сме ние</h3></header>
 
 
-        <p class="fun-about">
+        <p>
             За нас е удоволствие да Ви представим любимите си места за забавление на малки и пораснали деца!
-        </p>
-        <p class="fun-about">
+
             Заповядайте и разгледайте колекцията ни от местенца на открито и закрито.
-        </p>
-        <p class="fun-about">
+
             Тук ще откриете, къде бихте могли да отидете за ден, два или повече.
-        </p>
-        <p class="fun-about">
+
             Как да срещнете интересни животни или да поплувате, а защо не и двете?
-        </p>
-        <p class="fun-about">
+
             Разходете се сред природата с любимите си същества и се насладете на пътешествието!
         </p>
         <p class="thank">
             Благодарим за вниманието!
         </p>
-        <details class="fun-about">
 
-            <a href="/" class="fun-about"><h2>Заповядайте в основното меню...</h2></a>
-        </details>
+
+            <a href="/" class="a-class"><h2>Заповядайте в основното меню...</h2></a>
+
 
     </article>
 
