--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -58,7 +58,6 @@ body {
 .navbar {
     display: inline-block;
     grid-gap: 20px;
-    max-height: 50px;
     padding-right: 100px;
     /*background-color: #A6D2A8;*/
 }
@@ -80,13 +79,19 @@ body {
 .fun-about:hover{
     transform: scale(1.3);
     transition: transform 0.3s;
+    text-decoration: none;
+    list-style: none;
 
 }
+
+
 .nav-item:hover{
     transform: scale(1.3);
     transition: transform 0.3s;
 }
 .more-info:hover {
+    padding-top: 10px;
+    padding-bottom: 10px;
     transform: scale(1.3);
     transition: transform 0.3s;
 }
@@ -151,7 +156,8 @@ body {
     border-radius: 15px 15px 15px 15px;
     /*background-color: #819766;*/
     text-align: center;
-    padding: 5px 5px;
+    padding: 5px 15px;
+    padding-bottom: 20px;
     font-weight: bold;
 
 }
@@ -161,17 +167,40 @@ body {
     font-size: 1.90rem;
 }
 
+.fun-about h2 {
+    padding: 10px;
+    font-size: 1.40rem;
+    color:rgb(5, 28, 15);
+    list-style: none;
+    text-decoration: none;
+}
+
 .about_text, .a-class{
     font-size:  1.05rem;
     color:rgb(5, 28, 15);
    font-weight: bolder;
     padding-top: 10px;
+
     /*font-weight: bold;*/
+}
+
+.a-class{
+    font-size:  12px;
+      color:wheat;
+      font-weight: bolder;
+      padding-top: 10px;
+
+      /*font-weight: bold;*/
+  }
+
+.more-info{
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .thank {
     font-size:  1.35rem;
-    color: greenyellow;
+    color: #021e19;
 }
 
 
@@ -180,6 +209,11 @@ body {
     color: #d0e3d5;
     padding-left: 50px;
 }
+
+.text-center{
+    color:rgb(5, 28, 15);
+}
+
 .to-main-menu{
     color: #124C42;
 }
@@ -206,7 +240,9 @@ body {
     padding: 20px;
     text-align: center;
 }
-
+ p {
+     color: wheat;
+ }
 
 
 /*.dog-img:hover{*/
@@ -218,6 +254,7 @@ body {
     text-decoration: none;
     transform: scale(1.1);
 }
+
 
 td, th {
     padding: 3px 8px;
@@ -380,7 +417,7 @@ form.main-form {
 }
 
 .showcase h1 {
-    font-size: 2.7rem;
+    font-size: 2.4rem;
     margin-bottom: 0;
     color: var(--light);
 }
@@ -649,7 +686,43 @@ form.main-form {
 /*}*/
 
 @media (max-width: 768px) {
-    .navbar {
-        display: none;
+
+    body {
+        position: relative;
+        text-align: center;
     }
+
+   .fixed-top {
+      position: relative;
+    }
+    .about {
+        top:35%;
+        padding: 20px;
+        font-size: 10px;
+    }
+
+    .footer {
+       display: block;
+        position: sticky;
+
+    }
+    .navbar{
+        text-align: center;
+        padding: 5px;
+    }
+    .navbar ul {
+display: inline-block;
+grid-gap: 0px;
+}
+
+    .boxes {
+        display: grid;
+        grid-gap: 2%;
+        padding: 3% 5% 5%;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+
+
+
 }
