--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,21 +79,21 @@
     <a th:href="@{/categories/ВЪТРЕ}" class="main-btn">
         <div class="box">
             <h3>На закрито</h3>
-            <img src="/images/lulka.jpg" height="100px" alt="" class="pic-index">
+            <img src="/images/lulka.jpg" height="100px" alt="" class="pic-index rounded">
 
         </div>
     </a>
     <a th:href="@{/categories/НАВЪН}" class="main-btn">
         <div class="box">
             <h3>На открито</h3>
-            <img src="/images/bear.jpg" height="100px" alt="" class="pic-index">
+            <img src="/images/bear.jpg" height="100px" alt="" class="pic-index rounded">
 
         </div>
     </a>
     <a th:href="@{/categories/ЖИВОТНИ}" class="main-btn">
         <div class="box">
             <h3>С животни</h3>
-            <img src="/images/zaek.jpg" height="100px" alt="" class="pic-index">
+            <img src="/images/zaek.jpg" height="100px" alt="" class="pic-index rounded">
 
         </div>
     </a>
