html and css changes

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -32,9 +32,9 @@
             Благодарим за вниманието!
         </p>
 
-
+        <div class="more-info">
             <a href="/" class="a-class"><h2>Заповядайте в основното меню...</h2></a>
-
+        </div>
 
     </article>
 
