--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -10,7 +10,7 @@
     <nav th:replace="~{fragments/navbar}"></nav>
 </header>
 
-<section class="container">
+<section class="container-add">
 
     <h2 class="text-center text-white">Добавете място:</h2>
 
