--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="text-center">
-        <a href="/" class="a-class"><h2>Заповядайте в основното меню...</h2></a>
+        <a href="/" class="to-main-menu"><h2>Заповядайте в основното меню...</h2></a>
     </div>
 </div>
 
