--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -88,11 +88,12 @@ body {
 .nav-item:hover{
     transform: scale(1.3);
     transition: transform 0.3s;
+    font-weight: bold;
 }
 .more-info:hover {
     padding-top: 10px;
     padding-bottom: 10px;
-    transform: scale(1.3);
+    transform: scale(1.15);
     transition: transform 0.3s;
 }
 
@@ -136,6 +137,10 @@ body {
 /*}*/
 
 .container, .container-fluid {
+    padding-top: 4%;
+   }
+
+.container-add {
     padding-top: 90px;
 
 }
@@ -175,7 +180,7 @@ body {
     text-decoration: none;
 }
 
-.about_text, .a-class{
+.about_text{
     font-size:  1.05rem;
     color:rgb(5, 28, 15);
    font-weight: bolder;
@@ -185,13 +190,20 @@ body {
 }
 
 .a-class{
-    font-size:  12px;
+    font-size: 12px;
       color:wheat;
       font-weight: bolder;
       padding-top: 10px;
 
       /*font-weight: bold;*/
   }
+
+.change-color {
+    color: #16d942;
+    font-style: italic;
+
+
+}
 
 .more-info{
     padding-top: 10px;
@@ -210,12 +222,13 @@ body {
     padding-left: 50px;
 }
 
-.text-center{
-    color:rgb(5, 28, 15);
+.to-main-menu{
+    color: wheat;
 }
 
-.to-main-menu{
+.to-main-menu:hover{
     color: #124C42;
+    text-decoration: none;
 }
 
 .change {
@@ -252,6 +265,7 @@ body {
 
 .a-class:hover{
     text-decoration: none;
+    color: wheat;
     transform: scale(1.1);
 }
 
